codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_history_search_unavailable.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"┃ draft                                                                                             "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"                                                                                                    "
"  reverse-i-search: git                                                                             "
