codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_overlay_then_external_esc_hint.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"┃ Ask Codex to do anything                                                                          "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"┃                                                                                                   "
"                                                                                                    "
"  esc again to edit previous message                                                                "
